Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="jKXqZiIsfiAk9UmCa_mktsND7i0gTv0DD9SmqyWg4OQ" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VISHAL'S UNIFORM - Premium Uniform Solutions Hyderabad</title>
@@ -3734,5 +3735,6 @@ document.addEventListener('keydown', (e) => {
   
 </body>
 </html>
+
 
 
