Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="robots" content="index, follow">
   <script>
   (function () {
     const redirect = sessionStorage.redirect;
@@ -3745,6 +3746,7 @@ document.addEventListener('keydown', (e) => {
   
 </body>
 </html>
+
 
 
 
