Fix 404 page HTML and redirect behavior
Updated HTML structure and added meta refresh.

--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=/" />
   <script>
-    sessionStorage.redirect = location.pathname;
     window.location.replace("/");
   </script>
 </head>
