--- a/industrial-uniform.html
+++ b/industrial-uniform.html
@@ -42,6 +42,15 @@ We supply industrial uniforms in bulk with consistent quality and reliable deliv
 </p>
 
 <a href="/">← Back to Home</a>
+<hr>
 
+<p><strong>Our Other Uniform Categories:</strong></p>
+
+<ul>
+  <li><a href="/school-uniform.html">School Uniforms</a></li>
+  <li><a href="/corporate-uniform.html">Corporate Uniforms</a></li>
+  <li><a href="/hospital-uniform.html">Hospital Uniforms</a></li>
+  <li><a href="/industrial-uniform.html">Industrial Uniforms</a></li>
+</ul>
 </body>
 </html>
