--- a/school-uniform.html
+++ b/school-uniform.html
@@ -31,6 +31,13 @@
 Vishal’s Uniform is a reliable manufacturer and supplier of high-quality school uniforms in India. 
 We provide complete uniform solutions for schools including shirts, trousers, skirts, blazers, 
 sportswear and accessories.
+<p>
+Vishal’s Uniform is a reliable manufacturer and supplier of high-quality school uniforms in India. 
+We provide complete uniform solutions for schools including shirts, trousers, skirts, blazers, 
+sportswear and accessories.
+Vishal’s Uniform is a trusted uniform manufacturer in <strong>Hyderabad</strong>, supplying across 
+<strong>Telangana and India</strong>.
+</p>  
 </p>
 
 <p>
