Enhance description with location and service area
Added location and service area details for Vishal's Uniform.

--- a/industrial-uniform.html
+++ b/industrial-uniform.html
@@ -30,6 +30,7 @@
 <p>
 Vishal’s Uniform manufactures industrial uniforms designed for durability, safety and comfort.
 Our uniforms are suitable for factories, warehouses, workshops and industrial environments.
+ Vishal’s Uniform is a trusted industrial uniform manufacturer in <strong>Hyderabad</strong>, supplying workwear across <strong>Telangana and India</strong>. 
 </p>
 
 <p>
