--- a/corporate-uniform.html
+++ b/corporate-uniform.html
@@ -9,18 +9,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Product",
-    "name": "Corporate Uniforms",
-    "brand": "Vishal’s Uniform",
-    "description": "Professional corporate uniforms for offices and organizations.",
-    "offers": {
-      "@type": "Offer",
-      "availability": "https://schema.org/InStock"
-    }
-  }
-  </script>
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "Corporate Uniforms",
+  "image": "https://raw.githubusercontent.com/020304-keshav/Vishals-uniform-images/main/corporate-uniform.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Vishal’s Uniform"
+  },
+  "description": "Corporate uniform manufacturer supplying professional office wear, staff uniforms and formal uniforms for companies across India."
+}
+</script>
 </head>
 
 <body>
