--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
 <a href="/corporate-uniform.html">Corporate Uniforms</a>
 <a href="/hospital-uniform.html">Hospital Uniforms</a>
 <a href="/industrial-uniform.html">Industrial Uniforms</a>
+<a href="/security-uniform.html">Security Uniforms</a>
 <!-- INTERNAL LINKS END -->  
 
   <div id="root"></div>
@@ -3788,6 +3789,7 @@ document.addEventListener('keydown', (e) => {
   
 </body>
 </html>
+
 
 
 
