--- a/index.html
+++ b/index.html
@@ -2001,7 +2001,7 @@ document.addEventListener('keydown', (e) => {
         description: "Custom knitwear for organizations including custom logo hoodies, sweaters, and knitwear sets.",
         colors: ["Custom"],
         colorNames: ["Any Color"],
-        image: "https://raw.githubusercontent.com/020304-keshav/Vishals-uniform-images/main/SPECIALIZED%20KNITWEAR.jpeg?raw=true"
+        image: SPECIALIZED KNITEWEAR.jpeg?raw=true"
       }
     ];
 
@@ -3789,6 +3789,7 @@ document.addEventListener('keydown', (e) => {
   
 </body>
 </html>
+
 
 
 
