--- a/index.html
+++ b/index.html
@@ -3786,9 +3786,16 @@ document.addEventListener('keydown', (e) => {
 });
 </script>
 <!-- ========== END QR FIX ========== -->
-  
+  <!-- Specialized Knitwear Section -->
+<div style="padding: 40px; text-align: center; background: #f8f9fa;">
+    <h2>Specialized Knitwear</h2>
+    <img src="https://raw.githubusercontent.com/020304-keshav/Vishals-uniform-images/main/SPECIALIZED%20KNITWEAR.jpeg" 
+         alt="Knitwear" width="600" style="border-radius: 10px;">
+    <p>Premium knitwear designs</p>
+</div>
 </body>
 </html>
+
 
 
 
