--- a/index.html
+++ b/index.html
@@ -1996,16 +1996,14 @@ document.addEventListener('keydown', (e) => {
         image: "https://raw.githubusercontent.com/020304-keshav/Vishals-uniform-images/main/UNIFORM%20SWEATERS%26CARDIGANS.jpeg?raw=true"
       },
       {
-        {
-   {
-    id: "udf",
-    name: "SPECIALIZED KNITWEAR",
-    description: "Custom knitwear for organizations including custom logo hoodies, sweaters, and buttoners sets.",
-    color: ["Custom"],
-    colorName: ["Any Color"],
-    image: "https://github.com/vishalsuniform/Vishals-uniform-images/blob/main/SPECIALIZED%20KNITEWEAR.jpeg?raw=true"
-}
-
+   id: "kn8",
+        name: "SPECIALIZED KNITWEAR",
+        description: "Custom knitwear for organizations including custom logo hoodies, sweaters, and knitwear sets.",
+        colors: ["Custom"],
+        colorNames: ["Any Color"],
+        image: "https://github.com/vishalsuniform/Vishals-uniform-images/blob/main/SPECIALIZED%20KNITEWEAR.jpeg?raw=true"
+      }
+    ];
     const educationProducts = [
       {
         id: "ed1",
@@ -3796,6 +3794,7 @@ document.addEventListener('keydown', (e) => {
 </div>
 </body>
 </html>
+
 
 
 
