--- a/corporate-uniform.html
+++ b/corporate-uniform.html
@@ -36,11 +36,17 @@ Vishal’s Uniform provides premium corporate uniforms designed to enhance brand
 We supply uniforms for offices, hotels, showrooms, retail staff and service industries.
 </p>
 
+  <h2>Corporate Uniform Manufacturer in Hyderabad</h2>
+
 <p>
 Our corporate uniforms include shirts, trousers, blazers, waistcoats and customized office wear. 
 We focus on comfort, fabric quality and consistent branding across teams.
   Vishal’s Uniform is a trusted corporate uniform manufacturer in <strong>Hyderabad</strong>, supplying professional uniforms across <strong>Telangana and India</strong>.
 </p>
+
+<h3>Professional Corporate Uniforms for Offices & Companies</h3>
+<h3>Corporate Uniform Supplier Across India</h3>
+<h3>Custom Office Wear & Staff Uniforms</h3>
 
 <p>
 Bulk corporate uniform orders are handled with strict quality control and timely delivery across India.
