--- a/hospital-uniform.html
+++ b/hospital-uniform.html
@@ -37,9 +37,15 @@ Our uniforms are designed for hygiene, comfort and long working hours.
 Vishal’s Uniform is a trusted hospital uniform manufacturer in <strong>Hyderabad</strong>, supplying healthcare uniforms across <strong>Telangana and India</strong>.  
 </p>
 
+<h2>Hospital Uniform Manufacturer in Hyderabad</h2>
+  
 <p>
 We offer medical scrubs, nursing uniforms, lab coats and patient wear using breathable and easy-maintenance fabrics.
 </p>
+
+<h3>Medical & Healthcare Uniforms for Hospitals</h3>
+<h3>Hospital Uniform Supplier in Telangana</h3>
+<h3>Scrubs, Lab Coats & Staff Uniforms</h3>
 
 <p>
 Hospitals, clinics and healthcare institutions across India trust Vishal’s Uniform for reliable bulk supply.
