--- a/index.html
+++ b/index.html
@@ -622,15 +622,7 @@
   }
 </script>
 
-<!-- INTERNAL LINKS START -->
-<a href="/school-uniform.html">School Uniforms</a>
-<a href="/corporate-uniform.html">Corporate Uniforms</a>
-<a href="/hospital-uniform.html">Hospital Uniforms</a>
-<a href="/industrial-uniform.html">Industrial Uniforms</a>
-<a href="/security-uniform.html">Security Uniforms</a>
-<!-- INTERNAL LINKS END -->  
-
-  <div id="root"></div>
+<div id="root"></div>
   
  <!-- QR Code Modal - WORKING VERSION -->
 <div id="qrModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center z-50 p-4 no-print">
@@ -3785,8 +3777,21 @@ document.addEventListener('keydown', (e) => {
 });
 </script>
 <!-- ========== END QR FIX ========== -->
+<!-- SEO INTERNAL LINKS START -->
+<div class="seo-footer-links">
+  <h3>Our Uniform Categories</h3>
+  <ul>
+    <li><a href="/school-uniform.html">School Uniform Manufacturer in Hyderabad</a></li>
+    <li><a href="/corporate-uniform.html">Corporate Uniform Manufacturer in Hyderabad</a></li>
+    <li><a href="/hospital-uniform.html">Hospital Uniform Manufacturer in Hyderabad</a></li>
+    <li><a href="/industrial-uniform.html">Industrial Uniform Supplier in Hyderabad</a></li>
+    <li><a href="/security-uniform.html">Security Uniform Manufacturer in Hyderabad</a></li>
+  </ul>
+</div>
+<!-- SEO INTERNAL LINKS END --> 
 </body>
 </html>
+
 
 
 
