--- a/industrial-uniform.html
+++ b/industrial-uniform.html
@@ -2,55 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Industrial Uniform Manufacturer | Vishal’s Uniform</title>
 
-  <meta name="description" content="Vishal’s Uniform manufactures durable industrial uniforms, factory wear and safety workwear for industries across India." />
+  <title>Industrial Uniform Manufacturer in India | Vishal’s Uniform</title>
+
+  <meta name="description" content="Vishal’s Uniform is an industrial uniform manufacturer supplying factory uniforms, workwear and safety uniforms across India." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- SERVICE SCHEMA -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Service",
-  "name": "Industrial Uniform & Workwear Manufacturing",
-  "provider": {
-    "@type": "Organization",
-    "name": "Vishal’s Uniform",
-    "url": "https://vishalsuniform.github.io/"
-  },
-  "areaServed": {
-    "@type": "Country",
-    "name": "India"
-  },
-  "description": "Industrial uniform and safety workwear manufacturer supplying factories, warehouses and industrial units across India."
-}
-</script>
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Industrial Uniform & Workwear Manufacturing",
+    "provider": {
+      "@type": "Organization",
+      "name": "Vishal’s Uniform",
+      "url": "https://vishalsuniform.github.io/"
+    },
+    "areaServed": {
+      "@type": "Country",
+      "name": "India"
+    },
+    "description": "Industrial uniform and safety workwear manufacturer supplying factories, warehouses and industrial units across India."
+  }
+  </script>
+
 </head>
 
 <body>
 
-<h1>Industrial Uniform & Workwear Supplier</h1>
+<h1>Industrial Uniform Manufacturer & Supplier in India</h1>
 
 <p>
-Vishal’s Uniform manufactures industrial uniforms designed for durability, safety and comfort.
-Our uniforms are suitable for factories, warehouses, workshops and industrial environments.
- Vishal’s Uniform is a trusted industrial uniform manufacturer in <strong>Hyderabad</strong>, supplying workwear across <strong>Telangana and India</strong>. 
+Vishal’s Uniform is a trusted manufacturer of industrial uniforms and workwear in India.
+Our uniforms are designed for durability, safety and comfort in demanding industrial environments.
 </p>
 
 <h2>Industrial Uniform Manufacturer in Hyderabad</h2>
 
 <p>
-We offer customized industrial workwear including coveralls, shirts, trousers and safety uniforms.
-Quality stitching and strong fabrics ensure long service life.
+Based in <strong>Hyderabad</strong>, Vishal’s Uniform supplies high-quality industrial uniforms
+across <strong>Telangana and India</strong>. Our workwear is suitable for factories, warehouses,
+workshops and production units.
 </p>
 
 <h3>Factory, Worker & Safety Uniform Solutions</h3>
 
+<!-- IMAGE SEO START -->
+<img src="images/industrial-uniform-1.jpg" alt="Industrial uniform manufacturer in Hyderabad by Vishal’s Uniform">
+<img src="images/industrial-uniform-2.jpg" alt="Factory worker uniforms and industrial workwear in India">
+<img src="images/industrial-uniform-3.jpg" alt="Safety uniforms and industrial coveralls manufacturer">
+<img src="images/industrial-uniform-4.jpg" alt="Industrial uniforms for warehouses and production units">
+<img src="images/industrial-uniform-5.jpg" alt="Customized industrial workwear supplier in Telangana">
+<!-- IMAGE SEO END -->
+
 <p>
-We supply industrial uniforms in bulk with consistent quality and reliable delivery across India.
+We offer customized industrial workwear including coveralls, shirts, trousers and safety uniforms.
+Strong fabrics and quality stitching ensure long service life and reliable performance.
 </p>
 
-<a href="/">← Back to Home</a>
+<p>
+Bulk supply is available with consistent quality standards and dependable delivery schedules
+for industrial clients across India.
+</p>
+
 <hr>
 
 <p><strong>Our Other Uniform Categories:</strong></p>
@@ -61,5 +77,9 @@ We supply industrial uniforms in bulk with consistent quality and reliable deliv
   <li><a href="/hospital-uniform.html">Hospital Uniforms</a></li>
   <li><a href="/industrial-uniform.html">Industrial Uniforms</a></li>
 </ul>
+
+<p><a href="/">← Back to Home</a></p>
+
 </body>
 </html>
+
